test-package-compiler/tests/snapshots/compiler_tests__stdlib_set_codegen.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: core_erlang
---
module 'stdlib_set' ['start_link'/1, 'init'/1, 'handle_cast'/2, 'handle_call'/3, 'code_change'/3, 'terminate'/2, 'dispatch'/4, 'safe_dispatch'/3, 'method_table'/0, 'has_method'/1, 'spawn'/0, 'spawn'/1, 'new'/0, 'new'/1, 'superclass'/0]
  attributes ['behaviour' = ['gen_server']]

'start_link'/1 = fun (InitArgs) ->
    call 'gen_server':'start_link'('stdlib_set', InitArgs, [])


'spawn'/0 = fun () ->
    case call 'gen_server':'start_link'('stdlib_set', ~{}~, []) of
        <{'ok', Pid}> when 'true' ->
            {'beamtalk_object', 'StdlibSet', 'stdlib_set', Pid}
        <{'error', Reason}> when 'true' ->
            let SpawnErr0 = call 'beamtalk_error':'new'('instantiation_error', 'StdlibSet') in
            let SpawnErr1 = call 'beamtalk_error':'with_selector'(SpawnErr0, 'spawn') in
            call 'beamtalk_error':'raise'(SpawnErr1)
    end


'spawn'/1 = fun (InitArgs) ->
    case call 'gen_server':'start_link'('stdlib_set', InitArgs, []) of
        <{'ok', Pid}> when 'true' ->
            {'beamtalk_object', 'StdlibSet', 'stdlib_set', Pid}
        <{'error', Reason}> when 'true' ->
            let SpawnErr0 = call 'beamtalk_error':'new'('instantiation_error', 'StdlibSet') in
            let SpawnErr1 = call 'beamtalk_error':'with_selector'(SpawnErr0, 'spawnWith:') in
            call 'beamtalk_error':'raise'(SpawnErr1)
    end


'new'/0 = fun () ->
    let Error0 = call 'beamtalk_error':'new'('instantiation_error', 'Actor') in
    let Error1 = call 'beamtalk_error':'with_selector'(Error0, 'new') in
    let Error2 = call 'beamtalk_error':'with_hint'(Error1, #{#<85>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<112>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<119>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<100>(8,1,'integer',['unsigned'|['big']])}#) in
    call 'beamtalk_error':'raise'(Error2)

'new'/1 = fun (_InitArgs) ->
    let Error0 = call 'beamtalk_error':'new'('instantiation_error', 'Actor') in
    let Error1 = call 'beamtalk_error':'with_selector'(Error0, 'new:') in
    let Error2 = call 'beamtalk_error':'with_hint'(Error1, #{#<85>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<112>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<119>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<87>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<104>(8,1,'integer',['unsigned'|['big']]),#<58>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<100>(8,1,'integer',['unsigned'|['big']])}#) in
    call 'beamtalk_error':'raise'(Error2)

'superclass'/0 = fun () -> 'nil'


'init'/1 = fun (InitArgs) ->
    let DefaultState = ~{
        '$beamtalk_class' => 'StdlibSet',
        '__class_mod__' => 'stdlib_set',
        '__methods__' => call 'stdlib_set':'method_table'()
    }~
    in let FinalState = call 'maps':'merge'(DefaultState, InitArgs)
    in {'ok', FinalState}


'handle_cast'/2 = fun (Msg, State) ->
    case Msg of
        <{Selector, Args, FuturePid}> when 'true' ->
            case call 'stdlib_set':'safe_dispatch'(Selector, Args, State) of
                <{'reply', Result, NewState}> when 'true' ->
                    let _Ignored = call 'erlang':'!'(FuturePid, {'resolve', Result})
                    in {'noreply', NewState}
                <{'error', Error, NewState}> when 'true' ->
                    let _Ignored = call 'erlang':'!'(FuturePid, {'reject', Error})
                    in {'noreply', NewState}
            end
    end


'handle_call'/3 = fun (Msg, _From, State) ->
    case Msg of
        <{Selector, Args}> when 'true' ->
            case call 'stdlib_set':'safe_dispatch'(Selector, Args, State) of
                <{'reply', Result, NewState}> when 'true' ->
                    {'reply', {'ok', Result}, NewState}
                <{'error', Error, NewState}> when 'true' ->
                    {'reply', {'error', Error}, NewState}
            end
    end


'code_change'/3 = fun (_OldVsn, State, _Extra) ->
    %% TODO: Add state migration logic
    {'ok', State}


'terminate'/2 = fun (Reason, State) ->
    %% Call terminate method if defined (Flavors pattern)
    let Self = call 'beamtalk_actor':'make_self'(State) in
    case call 'stdlib_set':'dispatch'('terminate', [Reason], Self, State) of
        <{'reply', _TermResult, _TermState}> when 'true' -> 'ok'
        <{'error', _TermError, _TermState2}> when 'true' -> 'ok'
        <_TermOther> when 'true' -> 'ok'
    end


'safe_dispatch'/3 = fun (Selector, Args, State) ->
    let Self = call 'beamtalk_actor':'make_self'(State) in
    try call 'stdlib_set':'dispatch'(Selector, Args, Self, State)
    of Result -> Result
    catch <Type, Error, _Stacktrace> -> {'error', {Type, Error}, State}


'dispatch'/4 = fun (Selector, Args, Self, State) ->
    case Selector of
        <OtherSelector> when 'true' ->
            %% BT-229/ADR 0005: Check extension registry before hierarchy walk
            let ExtLookup = try call 'beamtalk_extensions':'lookup'('StdlibSet', OtherSelector)
                of ExtLookupResult -> ExtLookupResult
                catch <_EType, _EReason, _EStack> -> 'not_found'
            in
            case ExtLookup of
                <{'ok', ExtFun, _ExtOwner}> when 'true' ->
                    let ExtResult = apply ExtFun(Args, Self) in
                    {'reply', ExtResult, State}
                <'not_found'> when 'true' ->
                    %% ADR 0006: Try hierarchy walk before DNU
                    case call 'beamtalk_dispatch':'super'(OtherSelector, Args, Self, State, 'StdlibSet') of
                        <{'reply', InheritedResult, InheritedState}> when 'true' ->
                            {'reply', InheritedResult, InheritedState}
                        <{'error', _DispatchError}> when 'true' ->
                            %% Not in hierarchy - try doesNotUnderstand:args: (BT-29)
                            let DnuSelector = 'doesNotUnderstand:args:' in
                            let Methods = call 'maps':'get'('__methods__', State) in
                            case call 'maps':'is_key'(DnuSelector, Methods) of
                                <'true'> when 'true' ->
                                    call 'stdlib_set':'dispatch'(DnuSelector, [OtherSelector, Args], Self, State)
                                <'false'> when 'true' ->
                                    %% No DNU handler - return #beamtalk_error{} record
                                    let ClassName = call 'maps':'get'('$beamtalk_class', State) in
                                    let Error0 = call 'beamtalk_error':'new'('does_not_understand', ClassName) in
                                    let Error1 = call 'beamtalk_error':'with_selector'(Error0, OtherSelector) in
                                    let HintMsg = #{#<67>(8,1,'integer',['unsigned'|['big']]),#<104>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<99>(8,1,'integer',['unsigned'|['big']]),#<107>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<112>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<108>(8,1,'integer',['unsigned'|['big']]),#<108>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<103>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<114>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<117>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<39>(8,1,'integer',['unsigned'|['big']]),#<114>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<112>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<100>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<84>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<58>(8,1,'integer',['unsigned'|['big']]),#<39>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<118>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<114>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<102>(8,1,'integer',['unsigned'|['big']]),#<121>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<109>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<104>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<100>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<120>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']])}# in
                                    let Error = call 'beamtalk_error':'with_hint'(Error1, HintMsg) in
                                    {'error', Error, State}
                            end
                    end
            end
    end


'method_table'/0 = fun () ->
    ~{}~


'has_method'/1 = fun (Selector) ->
    call 'lists':'member'(Selector, [])

end
