test-package-compiler/tests/snapshots/compiler_tests__stdlib_set_parser.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
AST:
Module {
    expressions: [
        Assignment {
            target: Identifier(
                Identifier {
                    name: "colors",
                    span: Span {
                        start: 138,
                        end: 144,
                    },
                },
            ),
            value: MessageSend {
                receiver: Identifier(
                    Identifier {
                        name: "Set",
                        span: Span {
                            start: 148,
                            end: 151,
                        },
                    },
                ),
                selector: Keyword(
                    [
                        KeywordPart {
                            keyword: "fromList:",
                            span: Span {
                                start: 152,
                                end: 161,
                            },
                        },
                    ],
                ),
                arguments: [
                    Block(
                        Block {
                            parameters: [],
                            body: [
                                Literal(
                                    Symbol(
                                        "red",
                                    ),
                                    Span {
                                        start: 163,
                                        end: 167,
                                    },
                                ),
                            ],
                            span: Span {
                                start: 162,
                                end: 163,
                            },
                        },
                    ),
                ],
                span: Span {
                    start: 148,
                    end: 163,
                },
            },
            span: Span {
                start: 138,
                end: 163,
            },
        },
        Error {
            message: "Unexpected token: expected expression, found ,",
            span: Span {
                start: 167,
                end: 168,
            },
        },
        Error {
            message: "Unexpected token: expected expression, found ]",
            span: Span {
                start: 182,
                end: 183,
            },
        },
        Error {
            message: "Unexpected token: expected expression, found ]",
            span: Span {
                start: 229,
                end: 230,
            },
        },
        Error {
            message: "Unexpected token: expected expression, found ]",
            span: Span {
                start: 649,
                end: 650,
            },
        },
        Error {
            message: "Unexpected token: expected expression, found ]",
            span: Span {
                start: 708,
                end: 709,
            },
        },
        Error {
            message: "Unexpected token: expected expression, found ]",
            span: Span {
                start: 765,
                end: 766,
            },
        },
    ],
    span: Span {
        start: 138,
        end: 918,
    },
    leading_comments: [
        Comment {
            content: "// Copyright 2026 James Casey",
            span: Span {
                start: 138,
                end: 144,
            },
            kind: Line,
        },
        Comment {
            content: "// SPDX-License-Identifier: Apache-2.0",
            span: Span {
                start: 138,
                end: 144,
            },
            kind: Line,
        },
        Comment {
            content: "// Test Set (unique elements) operations",
            span: Span {
                start: 138,
                end: 144,
            },
            kind: Line,
        },
        Comment {
            content: "// Set creation from list",
            span: Span {
                start: 138,
                end: 144,
            },
            kind: Line,
        },
    ],
}

Diagnostics:
Diagnostic { severity: Error, message: "Expected ']' to close block", span: Span { start: 167, end: 168 } }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ,", span: Span { start: 167, end: 168 } }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 182, end: 183 } }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 229, end: 230 } }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 649, end: 650 } }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 708, end: 709 } }
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found ]", span: Span { start: 765, end: 766 } }
