test-package-compiler/tests/snapshots/compiler_tests__stdlib_string_lexer.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Token { kind: Identifier("greeting"), span: Span { start: 116, end: 124 }, leading_trivia: [LineComment("// Copyright 2026 James Casey"), Whitespace("\n"), LineComment("// SPDX-License-Identifier: Apache-2.0"), Whitespace("\n\n"), LineComment("// Test string operations"), Whitespace("\n\n"), LineComment("// String literals"), Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 125, end: 127 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: String("Hello"), span: Span { start: 128, end: 135 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("name"), span: Span { start: 136, end: 140 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 141, end: 143 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: String("World"), span: Span { start: 144, end: 151 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("message"), span: Span { start: 170, end: 177 }, leading_trivia: [Whitespace("\n\n"), LineComment("// Concatenation"), Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 178, end: 180 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("greeting"), span: Span { start: 181, end: 189 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: BinarySelector("++"), span: Span { start: 190, end: 192 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: String(", "), span: Span { start: 193, end: 197 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: BinarySelector("++"), span: Span { start: 198, end: 200 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("name"), span: Span { start: 201, end: 205 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: BinarySelector("++"), span: Span { start: 206, end: 208 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: String("!"), span: Span { start: 209, end: 212 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("len"), span: Span { start: 231, end: 234 }, leading_trivia: [Whitespace("\n\n"), LineComment("// String length"), Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 235, end: 237 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("greeting"), span: Span { start: 238, end: 246 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("length"), span: Span { start: 247, end: 253 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("isEqual"), span: Span { start: 276, end: 283 }, leading_trivia: [Whitespace("\n\n"), LineComment("// String comparison"), Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 284, end: 286 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: String("hello"), span: Span { start: 287, end: 294 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: BinarySelector("="), span: Span { start: 295, end: 296 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: String("hello"), span: Span { start: 297, end: 304 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("isLess"), span: Span { start: 305, end: 311 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 312, end: 314 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: String("apple"), span: Span { start: 315, end: 322 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: BinarySelector("<"), span: Span { start: 323, end: 324 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: String("banana"), span: Span { start: 325, end: 333 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("upper"), span: Span { start: 360, end: 365 }, leading_trivia: [Whitespace("\n\n"), LineComment("// String transformation"), Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 366, end: 368 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("greeting"), span: Span { start: 369, end: 377 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("uppercase"), span: Span { start: 378, end: 387 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("lower"), span: Span { start: 388, end: 393 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 394, end: 396 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("upper"), span: Span { start: 397, end: 402 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("lowercase"), span: Span { start: 403, end: 412 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("isEmpty"), span: Span { start: 432, end: 439 }, leading_trivia: [Whitespace("\n\n"), LineComment("// String testing"), Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 440, end: 442 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: String(""), span: Span { start: 443, end: 445 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("isEmpty"), span: Span { start: 446, end: 453 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("hasContent"), span: Span { start: 454, end: 464 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 465, end: 467 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("message"), span: Span { start: 468, end: 475 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("isNotEmpty"), span: Span { start: 476, end: 486 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("found"), span: Span { start: 508, end: 513 }, leading_trivia: [Whitespace("\n\n"), LineComment("// String searching"), Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 514, end: 516 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("message"), span: Span { start: 517, end: 524 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Keyword("includes:"), span: Span { start: 525, end: 534 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: String("World"), span: Span { start: 535, end: 542 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("starts"), span: Span { start: 543, end: 549 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 550, end: 552 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("message"), span: Span { start: 553, end: 560 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Keyword("startsWith:"), span: Span { start: 561, end: 572 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: String("Hello"), span: Span { start: 573, end: 580 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Eof, span: Span { start: 581, end: 581 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [] }
